--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link href="js/select/select2.css" rel="stylesheet">
 	<link href="js/select/select2-bootstrap.css" rel="stylesheet">
 	<link href="css/ui-lightness/jquery-ui-1.10.4.custom.min.css" rel="stylesheet">
+	<link href="css/jquery.datetimepicker.css" rel="stylesheet">
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
@@ -29,6 +30,7 @@
 	<script type="text/javascript" src="js/underscore.js"></script>
 	<script type="text/javascript" src="js/select/select2.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui-1.10.4.custom.min.js"></script>
+	<script type="text/javascript" src="js/jquery.datetimepicker.js"></script>
   <script type="text/javascript" src="js/linq/jquery.linq.min.js"></script>
   <script type="text/javascript" src="js/linq/linq.min.js"></script>
   <script type="text/javascript" src="js/date.js"></script>
