--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
 						<tr>
 							<th>Name</th>
 							<th>Number</th>
-							<th>Dep.<br/> Dep.Time</th>
+							<th>Dep.</th>
 							<th>Arr.</th>
 							<th>Price</th>
+							<th>Dep. Time</th>
 						</tr>
 					</thead>
 					<tbody id="flights_info"></tbody>
